--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongodb+srv://maheshpawar2010:<Pawar321Singh02>@cluster1.toedkwc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1/pinterest
+mongodb+srv://maheshpawar2010:Pawar321Singh02@cluster1.toedkwc.mongodb.net/pinterest?retryWrites=true&w=majority
