updated env again

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongodb+srv://maheshpawar2010:Pawar321Singh02@cluster1.toedkwc.mongodb.net/pinterest?retryWrites=true&w=majority
+mongodb+srv://maheshpawar2010:Pawar321Singh02@cluster0.l1yq6g4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
